--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "elorfin/json-api-bundle": "dev-master",
-        "elorfin/resource-bundle": "dev-master"
+        "elorfin/json-api-bundle": "^0.0.1",
+        "elorfin/resource-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0"
