wip implement forms

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -13,6 +13,7 @@ imports:
 #        result_cache_driver: apc
 #        query_cache_driver: apc
 
+# Configure logs
 monolog:
     handlers:
         main:
