--- a/web/client/package.json
+++ b/web/client/package.json
@@ -21,7 +21,7 @@
     },
     "devDependencies": {
         "bower": "~1.3",
-        "grunt": "~0.4",
+        "grunt-cli": "~0.1",
         "grunt-contrib-copy": "~0.8",
         "grunt-contrib-concat": "~0.5",
         "grunt-contrib-uglify": "~0.7",
