--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     },
     "devDependencies": {
         "bower": "~1.3",
+        "eslint": "~2.8",
         "grunt": "~0.4",
         "grunt-cli": "~0.1",
+        "grunt-eslint": "~18.1",
         "grunt-contrib-copy": "~0.8",
         "grunt-contrib-concat": "~0.5",
         "grunt-contrib-uglify": "~0.7",
