configure travis (build project)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ php:
   - 5.5
   - 5.6
   - 7.0
+
+install:
+  # Get server dependencies
+  - composer self-update
+  - composer update --prefer-source -o
+
+  # Create parameters file
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
