use project phpunit version to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ install:
   # Get server dependencies
   - composer self-update
   - composer update --prefer-source -o
+
+script: php bin/phpunit --configuration phpunit.xml --coverage-text
