--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,6 +17,13 @@ parameters:
     database_user:     root
     database_password: ~
 
+    # Database parameters for test environment
+    database_test_host:     127.0.0.1
+    database_test_port:     ~
+    database_test_name:     music_tools_test
+    database_test_user:     root
+    database_test_password: ~
+
     # Mailer parameters
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
