--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "": "src/",
+            "Tests\\": "tests/"
         },
         "classmap": [
             "app/AppKernel.php",
