--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,5 @@ install:
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:update --force --env=test
   - php bin/console doctrine:fixtures:load --no-interaction --env=test
-  - pwd
 
-script: php bin/phpunit
+script: php bin/phpunit --verbose
