--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,9 @@ install:
   - php bin/console doctrine:schema:update --force --env=test
   - php bin/console doctrine:fixtures:load --no-interaction --env=test
 
-script: php bin/phpunit --verbose
+script:
+  # Check the Coding Standards with PHP CS Fixer
+  - php bin/php-cs-fixer fix src/ --dry-run --verbose
+
+  # Run tests suite vith PHPUnit
+  - php bin/phpunit --verbose
