--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
         "webpack": "^1.12.11",
         "webpack-dev-server": "^1.14.1",
         "ts-loader": "^0.7.2",
+        "html-loader": "^0.4.3",
         "concurrently": "^2.0.0",
         "lite-server": "^2.2.0",
         "typescript": "^1.8.10",
