--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
         "postinstall": "typings install",
         "tsc": "tsc",
         "tsc:w": "tsc -w",
-        "typings": "typings"
+        "typings": "typings",
+        "webpack": "webpack --optimize-minimize --optimize-dedupe"
     },
     "dependencies": {
         "angular2": "2.0.0-beta.17",
@@ -26,7 +27,8 @@
         "es6-promise": "^3.0.2",
         "reflect-metadata": "0.1.2",
         "rxjs": "5.0.0-beta.6",
-        "zone.js": "0.6.12"
+        "zone.js": "0.6.12",
+        "bootstrap": "^4.0.0-alpha.2"
     },
     "devDependencies": {
         "bower": "~1.7",
@@ -43,6 +45,9 @@
         "webpack-dev-server": "^1.14.1",
         "ts-loader": "^0.7.2",
         "html-loader": "^0.4.3",
+        "css-loader": "^0.23.1",
+        "sass-loader": "^3.2.0",
+        "node-sass": "^3.4.2",
         "concurrently": "^2.0.0",
         "lite-server": "^2.2.0",
         "typescript": "^1.8.10",
