--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "declaration": true
   },
   "exclude": [
     "bin",
