--- a/client/package.json
+++ b/client/package.json
@@ -1,56 +1,63 @@
 {
-    "name": "music-tools",
-    "version": "1.0.0",
-    "description": "Web Application built on AngularJS to access the MusicTools API",
-    "keywords": [ "angular", "web", "ui", "music" ],
-    "authors": [ "Axel Penin" ],
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Elorfin/MusicTools.git"
-    },
-    "bugs": {
-        "url": "https://github.com/Elorfin/MusicTools/issues"
-    },
-    "scripts": {
-        "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-        "lite": "lite-server",
-        "postinstall": "typings install",
-        "tsc": "tsc",
-        "tsc:w": "tsc -w",
-        "typings": "typings",
-        "webpack": "webpack --optimize-minimize --optimize-dedupe"
-    },
-    "dependencies": {
-        "angular2": "2.0.0-beta.17",
-        "es6-shim": "^0.35.0",
-        "es6-promise": "^3.0.2",
-        "reflect-metadata": "0.1.2",
-        "rxjs": "5.0.0-beta.6",
-        "zone.js": "0.6.12",
-        "bootstrap": "^4.0.0-alpha.2"
-    },
-    "devDependencies": {
-        "bower": "~1.7",
-        "grunt": "~1.0",
-        "grunt-cli": "~1.2",
-        "grunt-eslint": "~18.1",
-        "grunt-contrib-copy": "~1.0",
-        "grunt-contrib-concat": "~1.0",
-        "grunt-contrib-uglify": "~1.0",
-        "grunt-contrib-less": "~1.3",
-        "grunt-contrib-watch": "~1.0",
-
-        "webpack": "^1.12.11",
-        "webpack-dev-server": "^1.14.1",
-        "ts-loader": "^0.7.2",
-        "html-loader": "^0.4.3",
-        "css-loader": "^0.23.1",
-        "sass-loader": "^3.2.0",
-        "node-sass": "^3.4.2",
-        "concurrently": "^2.0.0",
-        "lite-server": "^2.2.0",
-        "typescript": "^1.8.10",
-        "typings":"^0.8.1"
-    }
+  "name": "music-tools",
+  "version": "1.0.0",
+  "description": "Web Application built on AngularJS to access the MusicTools API",
+  "keywords": [
+    "angular",
+    "web",
+    "ui",
+    "music"
+  ],
+  "authors": [
+    "Axel Penin"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Elorfin/MusicTools.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Elorfin/MusicTools/issues"
+  },
+  "scripts": {
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings",
+    "webpack": "webpack --optimize-minimize --optimize-dedupe"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.17",
+    "bootstrap": "^4.0.0-alpha.2",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.35.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12"
+  },
+  "devDependencies": {
+    "bower": "~1.7",
+    "grunt": "~1.0",
+    "grunt-cli": "~1.2",
+    "grunt-eslint": "~18.1",
+    "grunt-contrib-copy": "~1.0",
+    "grunt-contrib-concat": "~1.0",
+    "grunt-contrib-uglify": "~1.0",
+    "grunt-contrib-less": "~1.3",
+    "grunt-contrib-watch": "~1.0",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1",
+    "ts-loader": "^0.7.2",
+    "html-loader": "^0.4.3",
+    "css-loader": "^0.23.1",
+    "sass-loader": "^3.2.0",
+    "node-sass": "^3.4.2",
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1"
+  }
 }
