wip Angular 2 + SASS

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,8 +9,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "noImplicitAny": true,
-    "declaration": true
+    "noImplicitAny": true
   },
   "exclude": [
     "bin",
