--- a/client/package.json
+++ b/client/package.json
@@ -25,36 +25,40 @@
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings",
-    "webpack": "webpack --optimize-minimize --optimize-dedupe"
+    "typings": "typings"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.17",
     "bootstrap": "^4.0.0-alpha.2",
-    "es6-promise": "^3.0.2",
+
+    "@angular/common":  "2.0.0-rc.1",
+    "@angular/compiler":  "2.0.0-rc.1",
+    "@angular/core":  "2.0.0-rc.1",
+    "@angular/http":  "2.0.0-rc.1",
+    "@angular/platform-browser":  "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+    "@angular/router":  "2.0.0-rc.1",
+    "@angular/router-deprecated":  "2.0.0-rc.1",
+    "@angular/upgrade":  "2.0.0-rc.1",
+
+    "systemjs": "0.19.27",
     "es6-shim": "^0.35.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.6.12",
+
+    "angular2-in-memory-web-api": "0.0.7"
   },
   "devDependencies": {
     "bower": "~1.7",
     "grunt": "~1.0",
     "grunt-cli": "~1.2",
-    "grunt-eslint": "~18.1",
-    "grunt-contrib-copy": "~1.0",
     "grunt-contrib-concat": "~1.0",
-    "grunt-contrib-uglify": "~1.0",
+    "grunt-contrib-copy": "~1.0",
     "grunt-contrib-less": "~1.3",
+    "grunt-contrib-uglify": "~1.0",
     "grunt-contrib-watch": "~1.0",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1",
-    "ts-loader": "^0.7.2",
-    "html-loader": "^0.4.3",
-    "css-loader": "^0.23.1",
-    "sass-loader": "^3.2.0",
-    "node-sass": "^3.4.2",
+    "grunt-contrib-sass": "~1.0",
+
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
