--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,12 @@
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings"
+    "typings": "typings",
+    "build": "tsc && grunt build"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "font-awesome": "^4.6",
 
     "@angular/common":  "2.0.0-rc.1",
     "@angular/compiler":  "2.0.0-rc.1",
@@ -44,19 +46,12 @@
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-
-    "angular2-in-memory-web-api": "0.0.7"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "bower": "~1.7",
     "grunt": "~1.0",
     "grunt-cli": "~1.2",
-    "grunt-contrib-concat": "~1.0",
     "grunt-contrib-copy": "~1.0",
-    "grunt-contrib-less": "~1.3",
-    "grunt-contrib-uglify": "~1.0",
-    "grunt-contrib-watch": "~1.0",
     "grunt-contrib-sass": "~1.0",
 
     "concurrently": "^2.0.0",
