--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "@angular/router-deprecated":  "2.0.0-rc.2",
     "@angular/upgrade":  "2.0.0-rc.2",
 
-    "systemjs": "0.19.27",
+    "systemjs": "~0.19",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
