--- a/client/package.json
+++ b/client/package.json
@@ -32,19 +32,17 @@
     "bootstrap": "^4.0.0-alpha.2",
     "font-awesome": "^4.6",
 
-    "@angular/common":  "2.0.0-rc.2",
-    "@angular/compiler":  "2.0.0-rc.2",
-    "@angular/core":  "2.0.0-rc.2",
-    "@angular/http":  "2.0.0-rc.2",
-    "@angular/platform-browser":  "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.2",
-    "@angular/router":  "3.0.0-alpha.7",
-    "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.2",
+    "@angular/common":  "2.0.0-rc.4",
+    "@angular/compiler":  "2.0.0-rc.4",
+    "@angular/core":  "2.0.0-rc.4",
+    "@angular/http":  "2.0.0-rc.4",
+    "@angular/platform-browser":  "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.4",
+    "@angular/router":  "3.0.0-beta.1",
 
     "systemjs": "~0.19",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
@@ -57,6 +55,6 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "typings": "^1.0.4"
   }
 }
